[gd_scene format=3 uid="uid://bvqr645ibcyj"]

[ext_resource type="Script" uid="uid://g7am62155tql" path="res://Script/Multiplayer/multiplayer_scene.gd" id="1_bgonm"]
[ext_resource type="PackedScene" uid="uid://doums0reb5f2t" path="res://Scenes/Multiplayer/multiShip.tscn" id="2_00mcd"]
[ext_resource type="Texture2D" uid="uid://dj7cewos0f1yt" path="res://Assets/Placeholder/LeveLSize.png" id="2_u2avd"]
[ext_resource type="Texture2D" uid="uid://dcbdh8p32pqmk" path="res://Assets/Placeholder/LeveLSizeFront.png" id="3_00mcd"]
[ext_resource type="FontFile" uid="uid://b374id4xcupdv" path="res://Fonts/PrStart.ttf" id="4_xccf5"]
[ext_resource type="Script" uid="uid://c6n33bhne3mg7" path="res://Script/Multiplayer/spawnPoint.gd" id="6_00mcd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_efk68"]
radius = 48.010414

[sub_resource type="CircleShape2D" id="CircleShape2D_ko2s7"]
radius = 257.0

[node name="TestLevel" type="Node2D" unique_id=2027567036]
script = ExtResource("1_bgonm")
PlayerScene = ExtResource("2_00mcd")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=328278644]
texture = ExtResource("2_u2avd")

[node name="Camera2D" type="Camera2D" parent="." unique_id=339137288]

[node name="Center" type="Area2D" parent="." unique_id=560254787]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Center" unique_id=668404933]
shape = SubResource("CircleShape2D_efk68")
debug_color = Color(0.9416667, 0.13440701, 0.50818497, 0.41960785)

[node name="Arena" type="Area2D" parent="." unique_id=117998313]
collision_mask = 3
gravity_space_override = 3
gravity_point = true
gravity_point_unit_distance = 48.0
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
gravity = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena" unique_id=948163335]
shape = SubResource("CircleShape2D_ko2s7")

[node name="Sprite2D2" type="Sprite2D" parent="." unique_id=1349949081]
z_index = 1
texture = ExtResource("3_00mcd")

[node name="Player1Score" type="RichTextLabel" parent="." unique_id=151219113]
z_index = 3
offset_left = -256.0
offset_top = -256.0
offset_right = -216.0
offset_bottom = -216.0
theme_override_fonts/normal_font = ExtResource("4_xccf5")
bbcode_enabled = true

[node name="Player2Score" type="RichTextLabel" parent="." unique_id=91899290]
z_index = 3
offset_left = 216.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = -216.0
theme_override_fonts/normal_font = ExtResource("4_xccf5")
bbcode_enabled = true

[node name="SpawnPoints" type="Node2D" parent="." unique_id=1627138602]

[node name="0" type="Node2D" parent="SpawnPoints" unique_id=79701748 groups=["PlayerSpawnPoint"]]
position = Vector2(-225, 0)
script = ExtResource("6_00mcd")

[node name="1" type="Node2D" parent="SpawnPoints" unique_id=2013462996 groups=["PlayerSpawnPoint"]]
position = Vector2(225, 0)
script = ExtResource("6_00mcd")
startRotation = 180.0

[connection signal="area_entered" from="Center" to="." method="_on_center_body_entered"]
[connection signal="body_entered" from="Center" to="." method="_on_center_body_entered"]
[connection signal="area_exited" from="Arena" to="." method="_on_hole_body_exited"]
[connection signal="body_exited" from="Arena" to="." method="_on_hole_body_exited"]
